--- a/src/components/sidemenu/sidemenu.css
+++ b/src/components/sidemenu/sidemenu.css
@@ -1,30 +1,118 @@
-.sidemenu {
+p {
+    font-family: "Roboto", sans-serif;
+}
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.sideBar {
+    width: 10rem;
     display: flex;
     flex-direction: column;
-    width: 150px;
-    height: 450px;
+    justify-content: space-between;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.082);
     background-color: white;
-    justify-content: space-evenly;
-    box-shadow: 5px 5px 10px rgb(185, 185, 185);
+    z-index: 9;
+    transition: width 0.15s;
 }
 
-.side-btn {
-    border: 2px solid rgb(243, 241, 241);
-    border-start-end-radius: 5px;
-    border-bottom-right-radius: 5px;
-    width: 120px;
-    height: 40px;
-    background: white;
-    color: black;
-
+.toggleBtn {
+    display: none;
 }
 
-.side-btn:hover {
-    background-color: rgb(88, 188, 227);
-    box-shadow: -5px 3px 3px rgb(185, 185, 185);
+.sidebar-content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.userDetails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    background-color: white;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.082);
+    position: relative;
+}
+
+.userDetails .img {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+}
+.userDetails img {
+    height: 100%;
+    width: 100%;
+}
+
+.userDetails p:nth-child(2) {
+    font-size: 16px;
+    margin-top: 3px;
+    display: flex;
+    gap: 2px;
+    align-items: center;
+}
+
+.userDetails p:nth-child(2) span {
+    font-size: 12px;
+    color: #2a82c8;
+    font-weight: 500;
+    display: grid;
+    align-content: center;
+}
+
+.userDetails p:nth-child(3) {
+    font-size: 12px;
+}
+
+.navigation {
+    display: flex;
+}
+.navigation ul {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.navigation li {
+    width: 90%;
+    height: 3rem;
+    /* background-color: aqua; */
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    border: 0.2px solid rgba(128, 128, 128, 0.26);
+    border-radius: 0 5px 5px 0;
+    font-family: sans-serif;
+}
+.navigation span {
+    margin-left: 10px;
+}
+.navigation img {
+    height: 20px;
+    width: 20px;
+}
+.sideBar button {
+    height: 30px;
     border: none;
+    font-weight: bolder;
+    background-color: #f9fdff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #2a82c8;
 }
-
-.side-btn .icons {
-    color: rgb(87, 176, 212);
+.sideBar button span {
+    margin-left: 5px;
+}
+.navigation .liactive,
+.navigation li:hover {
+    background-color: #b1e7ff;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.082);
+    border: none;
 }
