--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,8 +28,9 @@
     transform: rotate(90deg);
 }
 .navbar-left img {
-    height: 100px;
-    margin-left: 15px;
+    height: 80px;
+    width: 110px;
+    margin-left: 20px;
 }
 
 .navbar-right {
