--- a/src/components/body/Card1.css
+++ b/src/components/body/Card1.css
@@ -1,4 +1,4 @@
-.Card1Main {
+.card1Main {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -7,14 +7,12 @@
 }
 
 .card {
-    /* background-color: aqua; */
     width: 20rem;
     display: flex;
     flex-direction: column;
-    /* gap :1rem; */
     padding: 2rem;
     font-family: "Open Sans", sans-serif;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 30px;
     border-radius: 15px;
 }
 
@@ -29,6 +27,7 @@
     align-items: center;
     cursor: pointer;
 }
+
 .card button span {
     margin-left: 10px;
 }
@@ -44,6 +43,7 @@
     font-size: 12px;
     color: black;
 }
+
 .card p:nth-child(3) {
     font-size: 25px;
     font-family: "Open Sans", sans-serif;
@@ -70,13 +70,13 @@
 .card-bottom p {
     font-family: "Open Sans", sans-serif;
     font-size: 13px;
-    /* color: rgb(230, 0, 0); */
     margin-bottom: 1rem;
 }
+
 .card-bottom {
     display: flex;
     flex-direction: column;
-    /* gap: 1rem; */
+
 }
 
 .card-bottom ul li {
@@ -107,6 +107,7 @@
         width: 17rem;
         padding: 20px;
     }
+
     .card-bottom a {
         font-size: 13px;
     }
